0027629: Visualization - apply a correct model-world matrix to normals in fixed function pipeline with enabled zoom persistence.

Small correction of test case for issue CR27629